# hedorah

./: .env.example  .gitignore  Building the Research Agent.md  README.md  config.example.yaml  example-agenda.md  main.py  pyproject.toml
for_context/: sciweave_readme.md
hedorah/: __init__.py  cli.py  config.py  llm.py  obsidian.py  pdf_processor.py  pipeline.py  vault.py  watcher.py
test-vault/.obsidian/: workspace.json
test-vault/agendas/: default.md
test-vault/experiments/: Architecture-Dependent-Representational-Mechanisms-in-Prompting.md  Causal-Manipulation-of-GCMC-Through-Targeted-Neural-Stimulation.md  Circuit-Level-Mechanisms-of-GCMC-Emergence-in-Recurrent-Neural-Networks.md  Cross-Modal-GCMC-Validation-in-Electrophysiology-and-Neuroimaging-Data.md  Developmental-Trajectory-of-GCMC-During-Learning-and-Plasticity.md  Multi-Task-Representational-Interference-Patterns.md  Scaling-Laws-for-Representational-Geometry-in-Prompting.md  Training-Data-Influence-on-Representational-Geometry.md
test-vault/notes/: Connections - Neural-Manifold-Capacity-Captures-Representation-Geometry,-Correlations,-and-Task-Efficiency-Across-.md  Connections - The-Geometry-of-Prompting-Unveiling-Distinct-Mechanisms-of-Task.md  Insights - Neural-Manifold-Capacity-Captures-Representation-Geometry,-Correlations,-and-Task-Efficiency-Across-.md  Insights - The-Geometry-of-Prompting-Unveiling-Distinct-Mechanisms-of-Task.md
test-vault/papers/: Neural-Manifold-Capacity-Captures-Representation-Geometry,-Correlations,-and-Task-Efficiency-Across-.md  (+1 more)
